# ha-vafabmiljo

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml  validate.yml
custom_components/vafabmiljo/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  sensor.py  services.py  services.yaml  strings.json  switch.py  time.py
custom_components/vafabmiljo/translations/: en.json  sv.json
examples/: automation.yaml  dashboard.yaml  script.yaml
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py  test_services.py  test_switch.py  test_time.py
