[project]
name = "ha-vafabmiljo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.20.3",
    "pytest-cov>=3.0.0",
    "ruff>=0.15.21",
    "voluptuous>=0.13.1",
    # Pinned <3.10: aioresponses 0.7.9's ClientResponse mock isn't compatible with
    # aiohttp's newer required stream_writer kwarg.
    "aiohttp>=3.9.5,<3.10",
    "aioresponses>=0.7.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
